# EECS183Proj4

./: CMakeLists.txt  Circle.cpp  Color.cpp  Graphics.cpp  Line.cpp  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  data1.txt  data2.txt  pics.cpp  test.cpp
