cmake_minimum_required(VERSION 3.30)
project(Project4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Project4
        Circle.cpp
        Color.cpp
        Graphics.cpp
        Line.cpp
        pics.cpp
        Point.cpp
        Rectangle.cpp
        Triangle.cpp
        test.cpp
        Shape.cpp
        start.cpp
)
